fix padding on mobile social icons

--- a/themes/apg/static/css/base.css
+++ b/themes/apg/static/css/base.css
@@ -370,6 +370,7 @@ blockquote {
 
   .fa-2x {
     font-size: 1em;
+    padding: 2px;
   }
 }
 
